Introduce basic testing setup